force-app/main/default/objects/Apttus_Config2__LoyaltyPointAccrualSummary__c/Apttus_Config2__LoyaltyPointAccrualSummary__c.object-meta.xml
<CustomObject>
    <description>Represents a summary of loyalty points accrued for the account or contact</description>
    <label>Loyalty Point Accrual Summary</label>
    <nameField>
        <displayFormat>SA-{0000000000}</displayFormat>
        <label>Summary Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Point Accrual Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>