force-app/main/default/objects/Apttus_Config2__LoyaltyPointAccrualSummary__c/fields/Apttus_Config2__Comments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Comments__c</fullName>
    <description>User Entered Memo text</description>
    <inlineHelpText>User Entered Memo text</inlineHelpText>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>