force-app/main/default/objects/Apttus_Config2__LoyaltyPointAccrualSummary__c/fields/Apttus_Config2__ContactId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the contact associated with the point accrual summary</description>
    <inlineHelpText>ID of the contact associated with the point accrual summary</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loyalty Point Accrual Summary</relationshipLabel>
    <relationshipName>LoyaltyPointAccrualSummary</relationshipName>
    <type>Lookup</type>
</CustomField>