force-app/main/default/objects/Apttus_Config2__LoyaltyPointAccrualSummary__c/fields/Apttus_Config2__CycleEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CycleEndDate__c</fullName>
    <description>The loyalty cycle end date associated with the point accrual summary</description>
    <inlineHelpText>The loyalty cycle end date associated with the point accrual summary</inlineHelpText>
    <label>Cycle End Date</label>
    <type>Date</type>
</CustomField>