force-app/main/default/objects/Apttus_Config2__LoyaltyPointAccrualSummary__c/fields/Apttus_Config2__EnrollmentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnrollmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated loyalty enrollment</description>
    <inlineHelpText>ID of the associated loyalty enrollment</inlineHelpText>
    <label>Enrollment</label>
    <referenceTo>Apttus_Config2__IncentiveLoyaltyEnrollment__c</referenceTo>
    <relationshipLabel>Loyalty Point Accrual Summary</relationshipLabel>
    <relationshipName>LoyaltyPointAccrualSummary</relationshipName>
    <type>Lookup</type>
</CustomField>