force-app/main/default/objects/Apttus_Config2__LoyaltyPointAccrualSummary__c/fields/Apttus_Config2__GrantDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GrantDate__c</fullName>
    <description>The date the loyalty level was granted to the account/contact based on points accrued for the incentive</description>
    <inlineHelpText>The date the loyalty level was granted to the account/contact based on points accrued for the incentive</inlineHelpText>
    <label>Grant Date</label>
    <type>Date</type>
</CustomField>