force-app/main/default/objects/Apttus_Config2__LoyaltyPointAccrualSummary__c/fields/Apttus_Config2__LoyaltyLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LoyaltyLevel__c</fullName>
    <description>The loyalty level granted to the account/contact based on points accrued for the incentive</description>
    <inlineHelpText>The loyalty level granted to the account/contact based on points accrued for the incentive</inlineHelpText>
    <label>Loyalty Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>