force-app/main/default/objects/Apttus_Config2__LoyaltyPointAccrualSummary__c/fields/Apttus_Config2__LoyaltyLevelEarned__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LoyaltyLevelEarned__c</fullName>
    <description>The loyalty level earned by the account/contact or custom point accrual level based on points accrued for the incentive</description>
    <inlineHelpText>The loyalty level earned by the account/contact or custom point accrual level based on points accrued for the incentive</inlineHelpText>
    <label>Loyalty Level (Earned)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>